--- a/client/style.css
+++ b/client/style.css
@@ -16,4 +16,19 @@ table {
   display: inline-block;
   height: 200px;
   width: 350px;
+  text-align: center;
+}
+
+
+td:nth-child(2):hover {
+  -webkit-transition: 0.25s;
+  color: white;
+  cursor: pointer;
+}
+
+img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: auto;
 }
